--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
 }
 
-
 body {
     margin: 0%;
     padding: 0%;
@@ -12,27 +11,28 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.main{
+.main {
     height: 100vh;
-    width: 100vw;
+    width: 99vw;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px; /* Add some padding to the nav for a bit of space */
+    padding: 10px;
     margin-top: -15px;
     background-color: #1E1E1E;
-    width: 100vw;
+    width: 100%;
     height: 90px;
     padding-top: 30px;
-    
 }
-#h1{
+
+#h1 {
     transition: color 1s;
 }
-#h1 span{
+
+#h1 span {
     color: #0085ff;
 }
 
@@ -42,16 +42,13 @@ body {
     align-items: center;
     gap: 40px;
     font-size: large;
-    
- 
 }
 
-/* Add margin-left:auto to push Login and Sign Up buttons to the right */
-#btn1{
+#btn1 {
     margin-left: auto;
     color: #E1FFFF;
     background-color: #0085ff;
-    border-radius:13px ;
+    border-radius: 13px;
     border: none;
     font-size: 16px;
     width: 80px;
@@ -59,6 +56,7 @@ body {
     font-weight: 540;
     transition: background-color 2s, color 2s;
 }
+
 #btn2 {
     margin-left: 20px;
     margin-right: 30px;
@@ -66,43 +64,40 @@ body {
     font-weight: 540;
     color: #E1FFFF;
     background-color: #0085ff;
-    border-radius:13px ;
+    border-radius: 13px;
     border: none;
     width: 75px;
     height: 30px;
     transition: background-color 2s, color 2s;
 }
-/* .hero{
-    height: 91vh;
-    width: 100vw;
-    background-color:  #1A1A1E;
-} */
 
-#img{
-      position: absolute;
+#img {
+    position: absolute;
     width: 80%;
     margin-left: 9%;
     margin-right: 10%;
     height: 50%;
-    object-fit:cover;
+    object-fit: cover;
     border-radius: 20px;
     filter: blur(0.8px);
     z-index: -1;
 }
-#content{
+
+#content {
     position: relative;
     display: flex;
     justify-content: center;
     top: 16%;
-     font-size: xx-large;
-     font-weight: 600;
+    font-size: xx-large;
+    font-weight: 600;
     z-index: 1;
-    
 }
-#content span{
+
+#content span {
     color: #0085ff;
 }
-#content1{
+
+#content1 {
     position: relative;
     display: flex;
     justify-content: center;
@@ -111,7 +106,8 @@ body {
     font-weight: 500;
     z-index: 1;
 }
-#bar{
+
+#bar {
     width: 65%;
     height: 12%;
     margin-left: 260px;
@@ -119,131 +115,81 @@ body {
     background-color: #2d2d2d;
     border-radius: 53px;
     display: flex;
-    justify-content: space-evenly ;
+    justify-content: space-evenly;
     align-items: center;
 }
-#bar h4{
+
+#bar h4 {
     font-weight: 500;
     font-size: larger;
 }
-#bar button{
+
+#bar button {
     background-color: #1E1E1E;
-   height: 40px;
-   width: 40px;
-   border: none;
-   border-radius: 18px;
-   color: #eafdfd;
-   font-size: 22px;
+    height: 40px;
+    width: 40px;
+    border: none;
+    border-radius: 18px;
+    color: #eafdfd;
+    font-size: 22px;
 }
-#ico{
+
+#ico {
     margin-left: -56px;
- 
-    
- 
 }
-#icon{
+
+#icon {
     display: flex;
     justify-content: center;
-    align-items:end;
+    align-items: end;
     height: 230px;
 }
-#icon i{
+
+#icon i {
     padding-top: 10px;
     font-size: x-large;
-   margin-bottom: -20px;
+    margin-bottom: -20px;
 }
-.nav h3{
+
+.nav h3 {
     transition: font-size 0.5s;
 }
-#h1:hover {
-        cursor: pointer;
-        transition: 2s;
-        color: #69b4ff;
-    }
-.nav1 h3:hover{
-        cursor: pointer;
-        transition:  0.5s ease;
-         font-size: x-large;
-    }
-    #btn2:hover,
-    #btn1:hover {
-        background-color: #e1ffff;
-        color: #006fff;
-    }
-    #bar button:hover{
- cursor: pointer;
- color: #E1FFFF;
- background-color: #69b4ff;
-    }
-    #second{
-        height: 100vh;
-        width: 100%;
-        padding-top: 50px;
-         
-       
-    }
-   
- #card1{
-    position: relative;
-   width: 400px;
-   height:300px;
-   margin-top: 10px ;
-   margin-left: 50px;
-   border-radius: 15px;
-   background-color: #2D2D2D;
-   display: flex;
-   justify-content: space-between;
-   line-height: 24px;
-   z-index: 0;
- }
- #second i{
-   height: 40px;
-    margin-top: 18px;
-    margin-left: 18px;
-    /* display: inline-block; */
-    font-size: 32px;
-     
- }
- #card-content{ 
-    width: 320px;
-   padding-right: 10px;
-   
- }
- #card-content h1{
-    /* color: #bcfdfd; */
-    font-size: 20px;
-    
- }
- #card-content p{
-    font-size: medium;
- font-weight:50;
- }
- #colo{
-    position: absolute;
-    width: 400px;
-    height:50px;
-    margin-top: -51px ;
-    margin-left: 50px;
-    border-radius:0px 50px 0px 0px;
-   background-color: #69b4ff;
-   z-index: 1;
- }
- #colo2{
-    position: absolute;
-    width: 400px;
-    height:50px;
-    margin-top: 37px ;
-    margin-left: 50px;
-    border-radius:0px 50px 0px 0px;
-   background-color: #69b4ff;
-   z-index: 1;
- }
 
- #card2{
+#h1:hover {
+    cursor: pointer;
+    transition: 2s;
+    color: #69b4ff;
+}
+
+.nav1 h3:hover {
+    cursor: pointer;
+    transition: 0.5s ease;
+    font-size: x-large;
+}
+
+#btn2:hover,
+#btn1:hover {
+    background-color: #e1ffff;
+    color: #006fff;
+}
+
+#bar button:hover {
+    cursor: pointer;
+    color: #E1FFFF;
+    background-color: #69b4ff;
+}
+
+#second {
+    height: 100vh;
+    width: 100%;
+    padding-top: 50px;
+}
+
+#card1 {
     position: relative;
     width: 400px;
-    height:300px;
-   top: 90px;
+    height: 300px;
+    margin-top: 10px;
     margin-left: 50px;
     border-radius: 15px;
     background-color: #2D2D2D;
@@ -251,16 +197,74 @@ body {
     justify-content: space-between;
     line-height: 24px;
     z-index: 0;
- }
- #second {
-    position: relative; /* Make the parent container a positioning context */
+}
+
+#second i {
+    height: 40px;
+    margin-top: 18px;
+    margin-left: 18px;
+    font-size: 32px;
+}
+
+#card-content {
+    width: 320px;
+    padding-right: 10px;
+}
+
+#card-content h1 {
+    font-size: 20px;
+}
+
+#card-content p {
+    font-size: medium;
+    font-weight: 50;
+}
+
+#colo {
+    position: absolute;
+    width: 400px;
+    height: 50px;
+    margin-top: -51px;
+    margin-left: 50px;
+    border-radius: 0px 50px 0px 0px;
+    background-color: #69b4ff;
+    z-index: 1;
+}
+
+#colo2 {
+    position: absolute;
+    width: 400px;
+    height: 50px;
+    margin-top: 37px;
+    margin-left: 50px;
+    border-radius: 0px 50px 0px 0px;
+    background-color: #69b4ff;
+    z-index: 1;
+}
+
+#card2 {
+    position: relative;
+    width: 400px;
+    height: 300px;
+    top: 90px;
+    margin-left: 50px;
+    border-radius: 15px;
+    background-color: #2D2D2D;
+    display: flex;
+    justify-content: space-between;
+    line-height: 24px;
+    z-index: 0;
+}
+
+#second {
+    position: relative;
 }
 
 #card3 {
-    position: absolute; /* Position the card absolutely within the parent */
-    right: 5%; /* Align to the right side */
-   top: 35%; /* Align to the bottom */
-    margin-right: 30px; /* Add some right margin for spacing */
+    position: absolute;
+    right: 5%;
+    top: 35%;
+    margin-right: 30px;
     width: 400px;
     height: 300px;
     border-radius: 15px;
@@ -270,89 +274,94 @@ body {
     line-height: 24px;
     z-index: 0;
 }
-#colo3{
+
+#colo3 {
     position: absolute;
     width: 400px;
-    height:50px;
-    right: 7%; /* Align to the right side */
+    height: 50px;
+    right: 7%;
     top: 67%;
-    border-radius:50px 0px 0px 0px;
-   background-color: #69b4ff;
-   z-index: 1;
-}
-#second {
-    position: relative; /* Make the parent container a positioning context */
+    border-radius: 50px 0px 0px 0px;
+    background-color: #69b4ff;
+    z-index: 1;
 }
 
 #img2 {
     position: absolute;
-    left: 50%; /* Align the left side of the image to the horizontal center */
-    top: 50%; /* Align the top side of the image to the vertical center */
+    left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
-    height: 800px; /*Adjust horizontally and vertically to center the image*/
+    height: 800px;
 }
-#third{
+
+#third {
     width: 100%;
     height: 80%;
 }
-#heading{
+
+#heading {
     width: 100%;
     display: flex;
     justify-content: center;
 }
-#tcard1{
+
+#tcard1 {
     width: 300px;
-    height:340px;
+    height: 340px;
     background-color: #2D2D2D;
     border-radius: 12px;
 }
 
-#crd{
+#crd {
     margin-top: 50px;
-    width:100%;
+    width: 100%;
     display: flex;
     justify-content: center;
-   gap: 30px;
+    gap: 30px;
 }
 
-#image img{
- height: 230px;
- width: 300px;
- object-fit:cover;
- border-radius: 12px 12px 0px 0px;
- 
- 
+#image img {
+    height: 230px;
+    width: 300px;
+    object-fit: cover;
+    border-radius: 12px 12px 0px 0px;
 }
-#tcard1 h2{
+
+#tcard1 h2 {
     position: relative;
     left: 2%;
     font-size: large;
     font-weight: 480;
 }
-#logo{
+
+#logo {
+    padding-top: 35px;
+ padding-left:4px ;
     height: 22px;
     width: 22px;
-    /* background-color: #006; */
-    border-radius: 4px;
-    margin-left: 3px;
-    margin-top: 35px;
 }
-#org{
+
+#org {
     width: 100%;
     display: flex;
     margin-top: -25px;
 }
-#org h3{
+
+#org h3 {
     margin-top: 38px;
-    margin-left:6px ;
+    margin-left: 6px;
     font-size: small;
 }
-#org h4{
-    margin-left:100px ;
+
+#org h4 {
+    margin-left: 100px;
     font-size: small;
     margin-top: 38px;
 }
-.timer, .timer2, .timer3 {
+
+.timer,
+.timer2,
+.timer3 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -361,19 +370,20 @@ body {
     background-color: #69B4FF;
     border-radius: 6px 6px 12px 12px;
     font-size: 15px;
-    font-weight: bold; /* Alternatively, you can use 'bold' */
+    font-weight: bold;
 }
 
-#logo #imm{
+#logo #imm {
     height: 20px;
     width: 20px;
     border-radius: 2px;
 }
-#hr{
-    width: 50%;
 
+#hr {
+    width: 50%;
 }
-#tbtn{
+
+#tbtn {
     margin-left: 75.2%;
     margin-right: 30px;
     margin-top: 50px;
@@ -381,115 +391,214 @@ body {
     font-weight: 540;
     color: #E1FFFF;
     background-color: #0085ff;
-    border-radius:13px ;
+    border-radius: 13px;
     border: none;
     width: 100px;
     height: 30px;
     transition: background-color 2s, color 2s;
 }
-#tbtn:hover{
-    
-        background-color: #e1ffff;
-        color: #006fff;
-    
+
+#tbtn:hover {
+    background-color: #e1ffff;
+    color: #006fff;
 }
-#game-card{
- height: 70%;
- width: 100%;
- display: flex;
- justify-content: center;
- margin-top: 100px;
- gap: 22px;
+
+#game-card {
+    height: 70%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    gap: 22px;
 }
-#gcard1{
+
+#gcard1 {
     width: 350px;
-    height:235px;
-    background-color:#2D2D2D;
-    border-radius: 12px; 
+    height: 235px;
+    background-color: #2D2D2D;
+    border-radius: 12px;
 }
-.gimg1{
-    background-image: url("bgmi1.webp");
-    object-fit:cover;
+
+#gimg{
+   position: absolute;
+    width: 350px;
+max-height: 236px;
+border-radius: 12px;
+    z-index: 0;
 }
-.gimg2{
+.gimg1 {
+    /* background-image: url("bgmi1.webp"); */
+    object-fit: cover;
+}
+
+.gimg2 {
     background-image: url("ff.webp");
-    object-fit:cover;
+    object-fit: cover;
 }
-.gimg3{
+
+.gimg3 {
     background-image: url("valo.jpg");
-    object-fit:cover;
+
+    object-fit: cover;
 }
+
 #bgmi,#free-fire,#valorant{
-    margin-top:200px;
-    margin-left: 10px;
+    position: relative;
     color: #E1FFFF;
     background-color: #69B4FF;
-    border-radius:13px ;
+    border-radius: 13px;
     border: none;
     font-size: 16px;
+    margin-top: 182px;
+    margin-left: 5px;
     width: 80px;
     height: 30px;
     font-weight: 540;
+    opacity:  85%;
+    z-index: 1;
+    /* filter: blur(1px); */
 }
-#view{
+
+#view {
     position: relative;
     top: 70%;
     right: 110px;
     color: #E1FFFF;
-    background-color:#1E1E1E ;
-    border-radius:13px ;
+    background-color: #69b4ff;
+    border-radius: 13px;
     border: none;
     font-size: 16px;
     width: 100px;
     height: 30px;
     font-weight: 540;
 }
-.slider-container {
-    position: relative;
-    width: 65%;
+
+  
+  .slide img {
+    width: 70px;
+    height: 70px;
+    animation: scroll 30s linear infinite;
+  }
+  
+  .slide-track {
+ position: relative;
+    width: 60%;
+    gap: 3em;
+    padding-top: -40px ;
+    overflow: hidden;
     height: 12%;
-    margin-left: 260px; 
+    /* left: 35%; */
     background-color: #2d2d2d;
-    border-radius: 53px;
+    border-radius: 13px 13px 13px 13px;
     display: flex;
-    justify-content: space-evenly ;
+    justify-content: space-evenly;
     align-items: center;
+  }
+   #hed{
+    display: flex;
+    justify-content: center;
+
   }
   
   .slider {
-    overflow: hidden;
-    /* background-color: #0085ff; */
-  }
-  
-  .slides {
     display: flex;
-    transition: transform 0.5s ease;
+    justify-content:center ;
+    margin-top: 20px;
+    background-color: #1A1A1E;
+    padding: 20px 2em;
   }
+  footer {
+    height: auto;
+    width: 100%;
+    background-color: #1A1A1E;
+    color: #E1FFFF;
+    margin-top: 50%;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.footer-section {
+    width: 30%;
+    padding: 20px;
+}
+
+.footer-section h2 {
+    color: #69b4ff;
+}
+
+.contact span {
+    display: block;
+    margin-top: 10px;
+}
+
+.links ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.links li {
+    margin-bottom: 10px;
+}
+
+.links a {
+    color: #E1FFFF;
+    text-decoration: none;
+}
+
+.social-links a {
+    color: #E1FFFF;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+}
+
   
-  .slide {
-    min-width: 100%;
+  @keyframes scroll {
+    0% {transform: translateX(0);}
+    100% {transform: translatex(-1000%)}
   }
-  
-  .slide img {
-    width: 4vw;
+  @media screen and (max-width: 768px){
+  .nav{
+    width: 100vw;
   }
+    .nav1{
+        display: none;
+    }
+    #btn1{
+        margin-left: auto;
+
+    }
+    #btn2{
+      margin-right: auto;
+    }
+    #bar{
+        width: 500px;
+        margin-left: 90px;
+        font-size: 20px;
+    }
+    #second{
+        display: flex;
+        flex-direction: column;
+    }
+    #crd{
+        display: flex;
+        flex-direction: column;
+    }
+    #img2{
+        display: none;
+    }
+    #game-card{
+        display: flex;
+        flex-direction: column;
+    }
   
-  .prev-btn,
-  .next-btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    padding: 10px;
   }
-  
-  .prev-btn {
-    left: 0;
-  }
-  
-  .next-btn {
-    right: 0;
-  }
-  
+
